<resources>
    <string name="app_name">TeamUP</string>
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="google_login">Login with Google</string>
    <string name="logo">Logo</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="text_location_permission">TeamUP needs to access your location in order to find nearby lobbies</string>
    <string name="ok">OK</string>
    <string name="max_players">Max number of players</string>
    <string name="sport">Sport</string>
    <string name="create_new_lobby">Create a new lobby</string>
    <string name="select_a_location">Tap the map to select a location</string>
    <string name="select_an_hour">Tap here to select an hour</string>
    <string name="message">Message</string>
    <string name="get_directions">Get directions</string>
    <string name="view_on_map">View on map</string>
    <string name="resend_verification"><u>Resend verification</u></string>
    <string name="reset_password"><u>Reset password</u></string>
    <string name="change_profile">Change profile</string>
    <string name="select_sport">Select your sport</string>
    <string name="select_esport">Select your game</string>
    <string name="sports">Sports</string>
    <string name="esport">eSports</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="options">Options</string>
    <string name="participants">Press here to see participants</string>
    <string name="user">User</string>
    <string name="hour">00:00</string>
    <string name="kick">Kick</string>
    <string name="cancel">Cancel</string>
    <string name="rate">Rate</string>
    <string name="single_e_sport">eSport</string>
    <string name="time">Time</string>
</resources>
